# crewai-headless-flow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.md  LICENSE  NOTICE  README.md  main.py  pyproject.toml
.agents/: AGENTS.md
.github/instructions/: crewai-headless-flow-memory.instructions.md  python-memory.instructions.md
.github/workflows/: ci.yml
config/: flow.yaml  skills.yaml  worker.yaml
docs/: operator-playbook.md
docs/adr/: 0001-canonical-adr-location-for-domain-model-integration.md  0002-openwiki-replaces-domain-modeling-for-target-repo-context.md  0003-hitl-policy-seam.md  0004-run-store-crash-safe-checkpoints.md  0005-escalation-channel-seam.md  0006-flow-owned-git-delivery.md  0007-objective-verification-gate.md  0008-jsonl-event-log-and-logging-policy.md  0009-deny-paths-and-serial-isolation.md  0010-file-drop-job-queue.md  0011-reject-openwiki-domain-model-integration.md  0012-flowdefinition-topology-cutover.md
docs/architecture/: autonomy-gap-analysis.md
docs/plans/: 2026-06-02-claude-code-adapter.md  2026-07-06-conditional-hitl-phase-0.md  2026-07-06-domain-model-integration.md  2026-07-06-hitl-dmi-convergence.md  2026-07-10-autonomy-gap-analysis.md  2026-07-10-phase-1-unattended-reliability.md
docs/research/: 2026-07-14-flowdefinition-cutover.md
examples/: create_sample_target.py
scripts/: refresh_agent_skills.py
src/crewai_headless_flow/: __init__.py  cli.py  config.py  crew_defs.py  dashboard.html  dashboard.py  delivery.py  diagnostics.py  do_work_batch_contract.py  do_work_contract.py  do_work_crew.py  escalation.py  flow.py  flow_spike.py  flow_topology.py  hitl_policy.py  human_feedback_actions.py  job_queue.py  paths_policy.py  plan_contract.py  plan_crew.py  reporting.py  review_contract.py  review_crew.py  state.py  (+7 more)
tests/: test_flow_router_and_loop.py  test_headless_coders.py  test_skill_worker_wiring.py
(+117 files in other folders)
